src/Pages/Inventory/Components/MakePanel/MakePanel.css
.makes-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.704);
    z-index: 999;
}

.makes-panel {
    margin-bottom: 20em;
    width: 25%;
    list-style: none;
    overflow: hidden;
    border-radius: .5em;
    background-color: black;
    height: auto;
    padding: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    color: white;
    position: fixed;
    z-index: 1000;
}

.makes-header {
    width: 100%;
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
}

.makes-header h2 {
    padding-left: .5em;
    font-size: 1.1em;
}

.makes-header button {
    cursor: pointer;
    border: none;
    padding: .5em;
    background-color: var(--primary-color);
    border-radius: .2em;
    color: var(--text-color);
    display: flex;
    align-items: center;
    justify-content: center;
    transition: background-color 0.5s ease 0s;
}

.makes-header button:hover {
    background-color: var(--third-color);
}

.makes-panel li {
    cursor: pointer;
    border-radius: .2em;
    margin-top: .5em;
    margin-bottom: .5em;
    width: 100%;
    padding: .5em;
}

.makes-panel li:hover {
    background-color: var(--primary-color);
}

@media (max-width: 700px) {
    .makes-panel {
        width: 60%;
    }
}


@media (max-width: 900px) {
    .makes-panel {
        width: 40%;
    }
}

